// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title renders correctly with property level 1 1`] = `
<h1
  className="f1u5qyil"
>
  Hello World
</h1>
`;

exports[`Title renders correctly with property level 1 2`] = `
<h1
  className="f1u5qyil f1jc9aff"
>
  Hello World
</h1>
`;

exports[`Title renders correctly with property level 2 1`] = `
<h2
  className="ftzwl4g"
>
  Hello World
</h2>
`;

exports[`Title renders correctly with property level 2 2`] = `
<h2
  className="ftzwl4g f1jc9aff"
>
  Hello World
</h2>
`;

exports[`Title renders correctly with property level 3 1`] = `
<h3
  className="fiird0z"
>
  Hello World
</h3>
`;

exports[`Title renders correctly with property level 3 2`] = `
<h3
  className="fiird0z f1jc9aff"
>
  Hello World
</h3>
`;

exports[`Title renders null 1`] = `null`;
